[project]
name = "comfyui-video-downloader"
version = "1.0.0"
description = "Download a web video (TikTok / Bilibili / Instagram / YouTube ...) from a URL and output a ComfyUI VIDEO object."
license = "MIT"
requires-python = ">= 3.10"
dependencies = [
    "yt-dlp>=2024.0.0",
    "curl_cffi>=0.5.10",
]

[project.urls]
Repository = "https://github.com/yourname/comfyui-video-downloader"

[tool.comfy]
PublisherId = "yourname"
DisplayName = "Video Downloader (URL)"
Icon = ""
